--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_multi_subfolder/expected-kuberhealthy-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_multi_subfolder/expected-kuberhealthy-helmfile.yaml
@@ -9,6 +9,8 @@ repositories:
   url: https://kuberhealthy.github.io/kuberhealthy/helm-repos
 - name: jx3
   url: https://storage.googleapis.com/jenkinsxio/charts
+- name: jxgh
+  url: https://jenkins-x-charts.github.io/repo
 releases:
 - chart: kuberhealthy/kuberhealthy
   version: "54"
@@ -16,7 +18,7 @@ releases:
   values:
   - ../../versionStream/charts/kuberhealthy/kuberhealthy/values.yaml.gotmpl
   - jx-values.yaml
-- chart: jx3/jx-kh-check
+- chart: jxgh/jx-kh-check
   version: 0.0.68
   name: jx-kh-check
   values:
