--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_multi_subfolder/expected-secret-infra-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_multi_subfolder/expected-secret-infra-helmfile.yaml
@@ -9,6 +9,8 @@ repositories:
   url: https://external-secrets.github.io/kubernetes-external-secrets
 - name: jx3
   url: https://storage.googleapis.com/jenkinsxio/charts
+- name: jxgh
+  url: https://jenkins-x-charts.github.io/repo
 releases:
 - chart: external-secrets/kubernetes-external-secrets
   version: 4.0.0
@@ -16,7 +18,7 @@ releases:
   values:
   - ../../versionStream/charts/external-secrets/kubernetes-external-secrets/values.yaml.gotmpl
   - jx-values.yaml
-- chart: jx3/pusher-wave
+- chart: jxgh/pusher-wave
   version: 0.4.12
   name: pusher-wave
   values:
