--- a/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-secret-infra-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-secret-infra-helmfile.yaml
@@ -5,14 +5,14 @@ environments:
     - jx-values.yaml
 namespace: secret-infra
 repositories:
-- name: jx3
-  url: https://storage.googleapis.com/jenkinsxio/charts
+- name: jxgh
+  url: https://jenkins-x-charts.github.io/repo
 releases:
-- chart: jx3/vault-instance
+- chart: jxgh/vault-instance
   name: vault-instance
   values:
   - jx-values.yaml
-- chart: jx3/pusher-wave
+- chart: jxgh/pusher-wave
   name: pusher-wave
   values:
   - jx-values.yaml
