fix: remove old jx3 from chart values when migrating
so that migration to the new github chart repo works better

--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-helmfile.yaml
@@ -4,6 +4,7 @@ environments:
     values:
     - jx-values.yaml
 helmfiles:
+- path: jx/helmfile.yaml
 - path: secret-infra/helmfile.yaml
 templates: {}
 renderedvalues: {}
