fix: add label to lock versions
to prevent overriding versions from the version stream

--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/helmfiles/jx/helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/helmfiles/jx/helmfile.yaml
@@ -38,6 +38,8 @@ releases:
 - chart: jx3/lighthouse
   version: 1.1.10
   name: lighthouse
+  labels:
+    version.jenkins-x.io: override
   values:
   - ../../versionStream/charts/jx3/lighthouse/values.yaml.gotmpl
   - jx-values.yaml
