--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-jx-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-jx-helmfile.yaml
@@ -34,6 +34,8 @@ releases:
 - chart: jxgh/lighthouse
   version: 1.1.10
   name: lighthouse
+  labels:
+    version.jenkins-x.io: override
   values:
   - ../../versionStream/charts/jxgh/lighthouse/values.yaml.gotmpl
   - jx-values.yaml
@@ -44,7 +46,7 @@ releases:
   - ../../versionStream/charts/jxgh/bucketrepo/values.yaml.gotmpl
   - jx-values.yaml
 - chart: jxgh/jx-build-controller
-  version: 0.3.1
+  version: 0.3.3
   name: jx-build-controller
   values:
   - ../../versionStream/charts/jxgh/jx-build-controller/values.yaml.gotmpl
