--- a/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-jx-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/helmfile_subfolder/expected-jx-helmfile.yaml
@@ -35,7 +35,7 @@ releases:
   version: 1.1.10
   name: lighthouse
   labels:
-    version.jenkins-x.io: override
+    version.jenkins-x.io: lock
   values:
   - ../../versionStream/charts/jxgh/lighthouse/values.yaml.gotmpl
   - jx-values.yaml
@@ -48,9 +48,8 @@ releases:
 - chart: jxgh/jx-build-controller
   version: 0.3.3
   name: jx-build-controller
-  values:
-  - ../../versionStream/charts/jxgh/jx-build-controller/values.yaml.gotmpl
-  - jx-values.yaml
+  labels:
+    values.jenkins-x.io: lock
 - chart: jxgh/local-external-secrets
   version: 0.0.13
   name: local-external-secrets
