--- a/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/expected-jx-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/expected-jx-helmfile.yaml
@@ -14,6 +14,10 @@ releases:
   name: bucketrepo
   values:
   - jx-values.yaml
+- chart: jxgh/lighthouse
+  name: lighthouse
+  values:
+  - jx-values.yaml
 - chart: dev/dummy
   version: 1.2.3
   name: dummy
