--- a/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/helmfile.yaml
@@ -1,6 +1,7 @@
 releases:
   - chart: jenkins-x/tekton
   - chart: jenkins-x/bucketrepo
+  - chart: jenkins-x/lighthouse
   - chart: dev/dummy
     version: 1.2.3
 repositories:
