fix: set valid label value for nested gitlab repository
Signed-off-by: ankitm123 <ankitmohapatra123@gmail.com>

--- a/pkg/cmd/repository/create/test_data/input/.jx/gitops/source-config.yaml
+++ b/pkg/cmd/repository/create/test_data/input/.jx/gitops/source-config.yaml
@@ -15,4 +15,12 @@ spec:
     providerName: mygitlab
     repositories:
       - name: somegitlab
+  - owner: jx-gitlab-test
+    provider: https://gitlab.com
+    providerKind: gitlab
+    repositories:
+    - name: cluster/gitlab-import-test-1
+    - name: cluster/gitlab-import-test-2
+    scheduler: in-repo
+
   scheduler: cheese
