fix: Resources for release build
Trying to fix that goreleaser times out

--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -20,7 +20,13 @@ spec:
           name: ""
           resources: {}
         - name: next-version
-          resources: {}
+          resources:
+            limit:
+              cpu: 4
+              memory: 2Gi
+            requests:
+              cpu: 2
+              memory: 1Gi
         - name: jx-variables
           resources: {}
         - name: release-binary
