feat: add supply chain security
Signed-off-by: osamamagdy <osamamagdy174@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,16 @@ docs/apidocs/static/scroll.js
 pkg/jx/cmd/verify-pod.log
 
 plugin.gz
+
+
+# syft
+bin/syft
+
+# image tar files
+image.tar
+
+# docker credential binaries
+docker-credential-*
+
+# sbom json created by syft
+sbom.json
