--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   pipelineSpec:
     tasks:
-    - name: chart
+    - name: jx-pipeline-release
       resources: {}
       taskSpec:
         metadata: {}
@@ -25,19 +25,32 @@ spec:
           resources: {}
         - name: release-binary
           resources: {}
-        - name: build-and-push-image
-          resources: {}
+        - image: uses:jenkins-x/jx3-pipeline-catalog/tasks/build-scan-push/build-scan-push.yaml@versionStream
+          name: build-container
+        - image: uses:jenkins-x/jx3-pipeline-catalog/tasks/build-scan-push/build-scan-push.yaml@versionStream
+          name: push-container
         - name: chart-docs
           resources: {}
         - name: release-chart
           resources: {}
         - name: changelog
           resources: {}
+        - image: uses:jenkins-x/jx3-pipeline-catalog/tasks/supply-chain-security/task.yaml@versionStream
+          name: download-syft
+        - image: uses:jenkins-x/jx3-pipeline-catalog/tasks/supply-chain-security/task.yaml@versionStream
+          name: build-and-push-sbom
+          resources: {}
+        - name: cleanup-image-tar
+          image: alpine:3.16
+          resources: {}
+          script: |
+            #!/bin/sh
+            rm -f /workspace/source/image.tar
         - name: upload-binaries
           resources: {}
         - name: promote-release
           resources: {}
   podTemplate: {}
   serviceAccountName: tekton-bot
-  timeout: 240h0m0s
+  timeout: 1h30m0s
 status: {}
