refactor: move to helmfile org
Signed-off-by: ankitm123 <ankitmohapatra123@gmail.com>

--- a/pkg/cmd/ingress/testdata/notls/expected/namespaces/myapps/modify-ingress.yaml
+++ b/pkg/cmd/ingress/testdata/notls/expected/namespaces/myapps/modify-ingress.yaml
@@ -16,5 +16,6 @@ spec:
             name: godemo48
             port:
               number: 80
+        pathType: null
 status:
   loadBalancer: {}
