--- a/pkg/cmd/ingress/testdata/notls/source/config-root/namespaces/myapps/modify-old-ingress.yaml
+++ b/pkg/cmd/ingress/testdata/notls/source/config-root/namespaces/myapps/modify-old-ingress.yaml
@@ -12,6 +12,7 @@ spec:
       - backend:
           serviceName: godemo48
           servicePort: 80
+        pathType: null
     host: godemo48.cluster.local
   tls:
   - hosts:
