--- a/pkg/cmd/ingress/testdata/tls/expected/namespaces/myapps/modify-ingress.yaml
+++ b/pkg/cmd/ingress/testdata/tls/expected/namespaces/myapps/modify-ingress.yaml
@@ -16,6 +16,7 @@ spec:
             name: godemo48
             port:
               number: 80
+        pathType: null
   tls:
   - hosts:
     - godemo48.my.domain.com
