--- a/pkg/cmd/ingress/testdata/notls/source/config-root/namespaces/myapps/modify-ingress.yaml
+++ b/pkg/cmd/ingress/testdata/notls/source/config-root/namespaces/myapps/modify-ingress.yaml
@@ -14,6 +14,7 @@ spec:
             name: godemo48
             port:
               number: 80
+        pathType: null
     host: godemo48.cluster.local
   tls:
   - hosts:
