fix: Resources for release build
Trying to fix that goreleaser times out

--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -20,7 +20,10 @@ spec:
           name: ""
           resources: {}
         - name: next-version
-          resources: {}
+          resources:
+            requests:
+              cpu: 1600m
+              memory: 1400Mi
         - name: jx-variables
           resources: {}
         - name: release-binary
