chore: changes requested on PR

--- a/pkg/cmd/helm/release/testdata/charts/myapp/Chart.yaml
+++ b/pkg/cmd/helm/release/testdata/charts/myapp/Chart.yaml
@@ -5,5 +5,7 @@ version: 0.1.0-SNAPSHOT
 dependencies:
   - name: myapp-common
     version: 0.1.0-SNAPSHOT
-    repository: file://../myapp-common
- 
+    repository: file://myapp-common
+  - name: myapp-uncommon
+    version: 0.1.0-SNAPSHOT
+    repository: oci://myapp-uncommon
