fix: correct ingress details on custom namespaces
Where a namespace is specified for an environment,
custom ingress settings (ingress.domain & ingress.nameSpaceSubDomain)
should be populated in jx-values for the namespaces
fixes https://github.com/jenkins-x/jx/issues/8514

--- a/pkg/cmd/helmfile/resolve/testdata/custom-env-ingress/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/testdata/custom-env-ingress/expected-helmfile.yaml
@@ -1,5 +1,7 @@
 filepath: ""
 helmfiles:
+- path: helmfiles/custom1/helmfile.yaml
+- path: helmfiles/custom2/helmfile.yaml
 - path: helmfiles/foo/helmfile.yaml
 - path: helmfiles/jx/helmfile.yaml
 - path: helmfiles/jx-production/helmfile.yaml
