--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -8,6 +8,7 @@ spec:
     tasks:
     - name: jx-pipeline-release
       resources: {}
+      timeout: 1h30m0s
       taskSpec:
         metadata: {}
         stepTemplate:
