chore(scheduler): add SkipDraftPR from lighthouse v0.0.1109

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -74,7 +74,9 @@ linters:
   - asciicheck
   - bodyclose
   - deadcode
-  - depguard
+  # test disabling depguard because of
+  # Error: import 'k8s.io/apimachinery/pkg/api/errors' is not allowed from list 'Main' (depguard)
+  # - depguard 
   - errcheck
   - gofmt
   - goimports
