--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -21,10 +21,19 @@ spec:
           resources: {}
         - name: jx-variables
           resources: {}
-        - name: build-make-linux
+        - image: golang:1.22.1
+          name: build-make-linux
           resources: {}
-        - name: build-make-test
+          script: |
+            #!/bin/sh
+            make linux
+        - image: golang:1.22.1
+          name: build-make-test
           resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            make test
         - name: build-container-build
           resources: {}
   podTemplate: {}
