chore: make golangci-lint run pass

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,14 +1,10 @@
 linters-settings:
-  depguard:
-    list-type: blacklist
-    packages:
-    - github.com/jenkins-x/jx/v2/pkg/log/
-    - github.com/satori/go.uuid
-    - github.com/pborman/uuid
-    packages-with-error-message:
-    - github.com/jenkins-x/jx/v2/pkg/log/: "use jenkins-x/jx-logging instead"
-    - github.com/satori/go.uuid: "use github.com/google/uuid instead"
-    - github.com/pborman/uuid: "use github.com/google/uuid instead"
+  depguard: # https://github.com/kedacore/keda/issues/4980
+    rules:
+      main:
+        deny:
+          - pkg: sync/atomic
+            desc: "use type-safe atomics from go.uber.org/atomic"
   dupl:
     threshold: 100
   exhaustive:
@@ -77,9 +73,7 @@ linters:
   enable:
   - asciicheck
   - bodyclose
-  # test disabling depguard because of
-  # Error: import 'k8s.io/apimachinery/pkg/api/errors' is not allowed from list 'Main' (depguard)
-  # - depguard 
+  - depguard 
   - errcheck
   - gofmt
   - goimports
