chore(ci): restore pipelines from versionstream

--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -21,19 +21,10 @@ spec:
           resources: {}
         - name: jx-variables
           resources: {}
-        - image: golang:1.22
-          name: build-make-linux
+        - name: build-make-linux
           resources: {}
-          script: |
-            #!/bin/sh
-            make linux
-        - image: golang:1.22
-          name: build-make-test
+        - name: build-make-test
           resources: {}
-          script: |
-            #!/bin/bash
-            source .jx/variables.sh
-            make test
         - name: build-container-build
           resources: {}
   podTemplate: {}
