fix: reduce number of binaries to build
Nobody is downloading any arm or windows/arm64 binaries, so to save resources we stop building those

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,8 +29,10 @@ builds:
   # Defaults are 386 and amd64.
   goarch:
   - amd64
-  - arm
   - arm64
+  ignore:
+  - goos: windows
+    goarch: arm64
 archives:
 - name_template: "jx-gitops-{{ .Os }}-{{ .Arch }}"
   format_overrides:
