fix: decrease memory usage for linting

--- a/.lighthouse/jenkins-x/lint.yaml
+++ b/.lighthouse/jenkins-x/lint.yaml
@@ -25,7 +25,10 @@ spec:
           resources:
             requests:
               cpu: 1400m
-              memory: 5400Mi
+              memory: 4400Mi
+          env:
+          - name: GOGC
+            value: "30"
   podTemplate: {}
   serviceAccountName: tekton-bot
   timeout: 60m0s
