fix: increase timeout

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -110,7 +110,7 @@ issues:
   - 'shadow: declaration of "err" shadows declaration at'
   max-same-issues: 0
 run:
-  timeout: 30m
+  timeout: 1h30m
 # golangci.com configuration
 # https://github.com/golangci/golangci/wiki/Configuration
 service:
