--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+version: 2
 env:
 - GO111MODULE=on
 - CGO_ENABLED=0
@@ -48,7 +49,7 @@ checksum:
   algorithm: sha256
 changelog:
   # set it to true if you wish to skip the changelog generation
-  skip: true
+  disable: true
 release:
   # If set to true, will not auto-publish the release.
   # Default is false.
