--- a/pkg/cmd/helmfile/move/testdata/nonStandardNamespace/selenium-grid/selenium/keda/templates/keda-operator-auth-reader-rb.yaml
+++ b/pkg/cmd/helmfile/move/testdata/nonStandardNamespace/selenium-grid/selenium/keda/templates/keda-operator-auth-reader-rb.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/version: 2.15.1
     app.kubernetes.io/instance: selenium
   name: keda-operator-auth-reader
-  namespace: kube-system
+  namespace: "kube-system"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
