fix: update base image for preview
keeping file to due to test of Dockerfile-preview functionality

--- a/Dockerfile-preview
+++ b/Dockerfile-preview
@@ -1,3 +1,5 @@
-FROM ghcr.io/jenkins-x/jx-cli:latest
+FROM ghcr.io/jenkins-x/jx-boot:latest
+
+ENTRYPOINT ["jx-gitops"]
 
 COPY ./build/linux/jx-gitops /usr/bin/jx-gitops
