--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -21,10 +21,7 @@ spec:
           name: ""
           resources: {}
         - name: next-version
-          resources:
-            requests:
-              cpu: 1400m
-              memory: 1400Mi
+          resources: {}
         - name: jx-variables
           resources: {}
         - name: release-binary
