--- a/pkg/cmd/helmfile/resolve/testdata/helmfile_multi_subfolder/expected-kuberhealthy-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/testdata/helmfile_multi_subfolder/expected-kuberhealthy-helmfile.yaml
@@ -1,8 +1,8 @@
-filepath: ""
 environments:
   default:
     values:
     - jx-values.yaml
+---
 namespace: kuberhealthy
 repositories:
 - name: kuberhealthy
@@ -11,7 +11,7 @@ repositories:
   url: https://jenkins-x-charts.github.io/repo
 releases:
 - chart: kuberhealthy/kuberhealthy
-  version: "54"
+  version: '54'
   name: kuberhealthy
   values:
   - jx-values.yaml
@@ -27,5 +27,4 @@ releases:
   name: kh-tls-check
   values:
   - jx-values.yaml
-templates: {}
-renderedvalues: {}
+
