fix: use upstream resources

--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -22,11 +22,7 @@ spec:
           name: ""
           resources: {}
         - name: jx-variables
-          resources:
-            # override requests for the pod here
-            requests:
-              cpu: 1400m
-              memory: 600Mi
+          resources: {}
         - name: build-make-linux
           resources: {}
         - name: build-make-test
