--- a/pkg/cmd/requirement/merge/testdata/sample/changes.yml
+++ b/pkg/cmd/requirement/merge/testdata/sample/changes.yml
@@ -1,49 +1,41 @@
-autoUpdate:
-  enabled: false
-  schedule: ""
-cluster:
-  clusterName: "tf-jx-sweet-lemur"
-  devEnvApprovers: []
-  environmentGitOwner: ""
-  project: "jenkins-x-labs-bdd"
-  provider: gke
-  zone: "us-central1-a"
-  azure:
-    secretStorage:
-      keyVaultName: applejack
-gitops: true
-environments:
-- key: dev
-- key: staging
-- key: production
-ingress:
-  domain: "foo.io"
-  externalDNS: false
-  tls:
-    email: ""
+apiVersion: core.jenkins-x.io/v4beta1
+kind: Requirements
+spec:
+  autoUpdate:
     enabled: false
-    production: true
-kaniko: true
-storage:
-  backup:
-    enabled: false
-  logs:
-    enabled: true
-    url: gs://logs-tf-jx-sweet-lemur-9f71113659fb
-  reports:
-    enabled: true
-    url: gs://reports-tf-jx-sweet-lemur-9f71113659fb
-  repository:
-    enabled: true
-    url: gs://repository-tf-jx-sweet-lemur-9f71113659fb
-secretStorage: vault
-vault:
-  name: tf-jx-sweet-lemur
-  bucket: vault-tf-jx-sweet-lemur-9f71113659fb
-  key: crypto-key-tf-jx-sweet-lemur-9f71113659fb
-  keyring: keyring-tf-jx-sweet-lemur-9f71113659fb
-  serviceAccount: tf-jx-sweet-lemur-vt
-versionStream:
-  ref: master
-  url: https://github.com/jenkins-x/jenkins-x-versions.git
-webhook: "lighthouse"
+    schedule: ""
+  cluster:
+    clusterName: "tf-jx-sweet-lemur"
+    environmentGitOwner: ""
+    project: "jenkins-x-labs-bdd"
+    provider: gke
+    zone: "us-central1-a"
+    azure:
+      secretStorage:
+        keyVaultName: applejack
+  environments:
+    - key: dev
+    - key: staging
+    - key: production
+  ingress:
+    domain: "foo.io"
+    externalDNS: false
+    tls:
+      email: ""
+      enabled: false
+      production: true
+  storage:
+    - name: logs
+      url: gs://logs-tf-jx-sweet-lemur-9f71113659fb
+    - name: reports
+      url: gs://reports-tf-jx-sweet-lemur-9f71113659fb
+    - name: repository
+      url: gs://repository-tf-jx-sweet-lemur-9f71113659fb
+  secretStorage: vault
+  vault:
+    name: tf-jx-sweet-lemur
+    bucket: vault-tf-jx-sweet-lemur-9f71113659fb
+    key: crypto-key-tf-jx-sweet-lemur-9f71113659fb
+    keyring: keyring-tf-jx-sweet-lemur-9f71113659fb
+    serviceAccount: tf-jx-sweet-lemur-vt
+  webhook: "lighthouse"
