fix: increase memory request for release
related to jenkins-x/jx#8683

--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -23,7 +23,10 @@ spec:
         - name: next-version
           resources: {}
         - name: jx-variables
-          resources: {}
+          resources:
+            # set requests for the pod here
+            requests:
+              memory: 2Gi
         - name: release-binary
           resources: {}
         - name: build-and-push-image
