--- a/pkg/cmd/helmfile/add/testdata/expected/helmfiles/nginx/helmfile.yaml
+++ b/pkg/cmd/helmfile/add/testdata/expected/helmfiles/nginx/helmfile.yaml
@@ -1,4 +1,3 @@
-filepath: ""
 environments:
   default:
     values:
@@ -11,10 +10,8 @@ repositories:
   url: https://kubernetes.github.io/ingress-nginx
 releases:
 - chart: ingress-nginx/ingress-nginx
-  version: "4.0"
+  version: '4.0'
   name: nginx-ingress
   values:
   - ../../versionStream/charts/ingress-nginx/ingress-nginx/values.yaml.gotmpl
   - jx-values.yaml
-templates: {}
-renderedvalues: {}
