fix: correct test after fix

--- a/pkg/cmd/helmfile/resolve/testdata/replace-chart/expected-secret-infra-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/testdata/replace-chart/expected-secret-infra-helmfile.yaml
@@ -10,6 +10,6 @@ repositories:
 releases:
 - chart: wave-k8s/wave
   version: 3.0.0
-  name: wave
+  name: pusher-wave
   values:
   - jx-values.yaml
